--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ linkedin_username: "Erick Javier Acosta Martínez"
 #########################################################################################
 theme: "minima"
 
-rss: rss
+# rss: rss
 
 kramdown:
   syntax_highlighter_opts:
